--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="photo_of_the_day_stub">Photo of the Day</string>
     <string name="search_wiki">Найти в Википедии</string>
     <string name="wiki_helper_text">Поиск термина</string>
+    <string name="today">Сегодня</string>
+    <string name="yesterday">Вчера</string>
+    <string name="day_before_yesterday">Позавчера</string>
 </resources>
