--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="today">Сегодня</string>
     <string name="yesterday">Вчера</string>
     <string name="day_before_yesterday">Позавчера</string>
+    <string name="settings">Settings</string>
+    <string name="favourite">Favourite</string>
+    <string name="search">Search</string>
+    <string name="item_1">На экран 1</string>
+    <string name="item_2">На экран 2</string>
 </resources>
