--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="search">Search</string>
     <string name="item_1">На экран 1</string>
     <string name="item_2">На экран 2</string>
+    <string name="default_text_chip_theme_settings">Default</string>
+    <string name="mars_text_chip_theme_settings">Mars Theme</string>
+    <string name="venus_text_chip_theme_settings">Venus Theme</string>
 </resources>
