Lesson4 MotionLayout во фрагменте Settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="tdby_tab_text">Позавчера</string>
     <string name="wiki_russian_text">Российская Wiki</string>
     <string name="wiki_english_text">Английская Wiki</string>
+    <string name="top_text">Top</string>
 </resources>
